--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ matplotlib = "^3.7.1"
 python-dotenv = "^1.0.0"
 supabase = "^1.0.3"
 flask = "^2.3.2"
+gunicorn = "^20.1.0"
 
 [build-system]
 requires = ["poetry-core"]
